--- a/bin/src/main/resources/templates/block/header.html
+++ b/bin/src/main/resources/templates/block/header.html
@@ -26,7 +26,7 @@
 							</div>
 						</div></li>
 					<li><a class="navown px-2" href="/about">ABOUT US</a></li>
-					<li><a class="navown px-2" href="#">ORDERS</a></li>
+					<li><a class="navown px-2" href="/tracking">TRACKING</a></li>
 					<li><a class="navown px-2" href="/login">SING IN</a></li>
 					<li><a class="navown px-2" href="/carrito">SHOP<i
 							class="fas fa-shopping-cart ps-2"></i></a></li>
