--- a/bin/src/main/resources/templates/carritoPago.html
+++ b/bin/src/main/resources/templates/carritoPago.html
@@ -15,6 +15,8 @@
     <!--animate css  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+    <!--STRIPE-->
+    <script src="https://js.stripe.com/v3/"></script>
     <!--Own Styles  -->
     <link rel="stylesheet" href="css/cstyle.css">
     <link rel="stylesheet" href="css/estilo.css">
@@ -23,6 +25,10 @@
     <!--ALLfont.es-->
     <link href="https://allfont.es/allfont.css?fonts=montserrat-light" rel="stylesheet" type="text/css" />
     <link href="https://allfont.es/allfont.css?fonts=playfair-display" rel="stylesheet" type="text/css" />
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 </head>
 
 <body>
@@ -51,7 +57,21 @@
             </div>
         </div>
     </div>
-
+    <div>
+        <h1>PRUEBA </h1>
+        <form action='/charge' method='POST' id='checkout-form'>
+          <input type='hidden' th:value='${amount}' name='amount' />
+          <!--<label>Price:<span th:text='${amount/100}' /></label>-->
+          <!-- NOTE: data-key/data-amount/data-currency will be rendered by Thymeleaf -->
+          <script src='https://checkout.stripe.com/checkout.js' class='stripe-button' th:attr='data-key=${stripePublicKey}, 
+             data-amount=${amount}, 
+             data-currency=${currency}' data-name='Baeldung' data-description='Spring course checkout'
+            data-image='https://www.baeldung.com/wp-content/themes/baeldung/favicon/android-chrome-192x192.png'
+            data-locale='auto' data-zip-code='false'>
+            </script>
+        </form>
+        <h2>FIN PRUEBA</h2>
+    </div>
     <th:block th:include="/block/footer"></th:block>
 
 </body>
