--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -80,8 +80,7 @@
                             </select>
                         </div>
                          <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">rol</label>
-                            <input id="nombre" th:field="${usuario.rol}" name="nombre" type="text" class="form-control">
+                            <input id="nombre" type="hidden" th:field="${usuario.rol}" name="nombre" class="form-control">
                         </div>
                         
                         <div class="mb-3 form-check">
