--- a/src/main/resources/templates/block/header.html
+++ b/src/main/resources/templates/block/header.html
@@ -16,7 +16,7 @@
 					<li><a class="navown px-2" href="/about">ABOUT US</a></li>
 					<li><a class="navown px-2" href="/tracking">TRACKING</a></li>
 					<li><a class="navown px-2" href="/login">SING IN</a></li>
-					<li><a class="navown px-2" href="/carrito">SHOP<i
+					<li><a class="navown px-2" href="/ShowCarrito">SHOP<i
 							class="fas fa-shopping-cart ps-2"></i></a></li>
 				</ul>
 			</div>
