--- a/src/main/resources/templates/carritoRegistro.html
+++ b/src/main/resources/templates/carritoRegistro.html
@@ -61,6 +61,10 @@
 										$
 										<th th:text="${producto.precio}" />
 									</p>
+									<p class="card-text">
+										$
+										<th th:text="${producto.id_producto}" />
+									</p>
 								</div>
 							</div>
 						</div>
