--- a/src/main/resources/templates/index1.html
+++ b/src/main/resources/templates/index1.html
@@ -1,186 +1,105 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WoodMeister</title>
-	<!--Boostrap  -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<!--Boostrap Script  -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-		crossorigin="anonymous"></script>
-	<!--animate css  -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>WoodMeister</title>
+<!--Boostrap  -->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+<!--Boostrap Script  -->
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+	crossorigin="anonymous"></script>
+<!--animate css  -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-	<!--Own Styles  -->
-	<link rel="stylesheet" href="css/cstyle.css">
-	<!--Font Awesome-->
-	<script src="https://kit.fontawesome.com/f2dde07271.js" crossorigin="anonymous"></script>
-	<!--ALLfont.es-->
-	<link href="https://allfont.es/allfont.css?fonts=montserrat-light" rel="stylesheet" type="text/css" />
-	<link href="https://allfont.es/allfont.css?fonts=playfair-display" rel="stylesheet" type="text/css" />
+<!--Own Styles  -->
+<link rel="stylesheet" href="css/cstyle.css">
+<!--Font Awesome-->
+<script src="https://kit.fontawesome.com/f2dde07271.js"
+	crossorigin="anonymous"></script>
+<!--ALLfont.es-->
+<link href="https://allfont.es/allfont.css?fonts=montserrat-light"
+	rel="stylesheet" type="text/css" />
+<link href="https://allfont.es/allfont.css?fonts=playfair-display"
+	rel="stylesheet" type="text/css" />
 
-	<!--FlexSlider -->
-	<link rel="stylesheet" href="css/flexslider.css" type="text/css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-	<script src="js/jquery.flexslider.js"></script>
+<!--FlexSlider -->
+<link rel="stylesheet" href="css/flexslider.css" type="text/css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+<script src="js/jquery.flexslider.js"></script>
 
-	<!--Own JS-->
-	<script src="js/main.js"></script>
+<!--Own JS-->
+<script src="js/main.js"></script>
 </head>
 
 <body>
 
 	<th:block th:include="/block/header"></th:block>
-	<main>
-		<!--Flexslider-->
-		<aside id="flexcontainer">
-			<div class="flexslider">
-				<ul class="slides">
-					<th:block th:each="slider, row:${slider}">
-						<li th:style="'background-image:url(' + @{${'img/'+ slider.nombreImagen }} + ');'"
-							class="liflex">
-							<div class="container">
-								<div class="col-md-6 col-md-offset-3 col-md-pull-3 text-slider">
-									<div class="text-slider2">
-										<div class="cont-flex">
-											<span class="precio">$
-												<th th:text="${slider.precio}" />
-											</span>
-											<h2>
-												<th th:text="${slider.nombre}" />
-											</h2>
-											<p>
-												<th th:text="${slider.descripcion}" />
-											</p>
-											<p>
-												<a th:onclick="'obtenerIds('+${slider.id_producto}+')'"
-													class="buttonown goldbutton">Comprar</a>
-											</p>
-										</div>
-									</div>
-
-								</div>
-							</div>
-						</li>
-					</th:block>
-
-
-				</ul>
-			</div>
-		</aside>
-		<!--PRODUCTS-->
-		<div class="container-fluid rob">
-			<section class="row justify-content-center">
-				<div class="col-md-8 col-md-offset-2 text-center header-products">
-					<span>Creatividad con Madera</span>
-					<h2>Nuestros productos</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga
-						molestias accusamus alias autem provident. Odit ab aliquam dolor
-						eius.</p>
-				</div>
-			</section>
-
-
-			<div class="container">
-				<div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-					<div class="col">
-						<div class="p-3 border bg-light">
-							<div class="fotoProducto">
-								<img src="https://www.superherodb.com//pictures2//portraits//10//100//52.jpg"
-									class="productsCards card-img-top" alt="...">
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">
-									Hola
-								</h5>
-								<p class="card-text">
-									Buenas
-							</div>
-						</div>
-					</div>
-					<div class="col">
-						<div class="p-3 border bg-light">
-							<div class="fotoProducto">
-								<img src="https://www.superherodb.com//pictures2//portraits//10//100//52.jpg"
-									class="productsCards card-img-top" alt="...">
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">
-									Hola
-								</h5>
-								<p class="card-text">
-									Buenas
-							</div>
-						</div>
-					</div>
-					<div class="col">
-						<div class="p-3 border bg-light">
-							<div class="fotoProducto">
-								<img src="https://www.superherodb.com//pictures2//portraits//10//100//52.jpg"
-									class="productsCards card-img-top" alt="...">
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">
-									Hola
-								</h5>
-								<p class="card-text">
-									Buenas
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-
-
-
-			<th:block th:each="producto, row:${producto}">
-				<div class="container">
-					<div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-						<div class="col">
-							<div class="p-3 border bg-light">
-								<div class="containerNuiw"
-									th:style="'background-image:url(' + @{${'img/'+ producto.nombreImagen }} + ');'">
-									<div class="overlayNiuw">
-										<div class="items"></div>
-										<div class="items head">
-											<p>
-												<th th:text="${producto.nombre}" />
-											</p>
-											<hr>
-										</div>
-										<div class="items price">
-											<p class="old">
-												<th th:text="${producto.precio - 50}" />
-											</p>
-											<p class="new">
-												<th th:text="${producto.precio}" />
-											</p>
-										</div>
-										<div class="items cart" th:onclick="'obtenerIds('+${producto.id_producto}+')'">
-											<input type="hidden" th:value="${producto.id_producto}" id="id">
-											<i class="fa fa-shopping-cart"></i>
-											<span>ADD TO CART</span>
-										</div>
+	<main> <!--Flexslider-->
+	
+	<aside id="flexcontainer">
+		<div class="flexslider">
+			<ul class="slides">
+				<th:block th:each="slider, row:${slider}">
+					<li
+						th:style="'background-image:url(' + @{${'img/'+ slider.nombreImagen }} + ');'"
+						class="liflex">
+						<div class="container">
+							<div class="col-md-6 col-md-offset-3 col-md-pull-3 text-slider">
+								<div class="text-slider2">
+									<div class="cont-flex">
+										<span class="precio">$
+											<th th:text="${slider.precio}" />
+										</span>
+										<h2>
+											<th th:text="${slider.nombre}" />
+										</h2>
+										<p>
+											<th th:text="${slider.descripcion}" />
+										</p>
+										<p>
+											<a th:onclick="'obtenerIds('+${slider.id_producto}+')'"
+												class="buttonown goldbutton">Comprar</a>
+										</p>
 									</div>
 								</div>
+
 							</div>
 						</div>
-					</div>
-				</div>
-			</th:block>
+					</li>
+				</th:block>
 
 
+			</ul>
+		</div>
+	</aside>
+	<!--PRODUCTS-->
+	<div class="container-fluid rob" >
+		<section class="row justify-content-center">
+			<div class="col-md-8 col-md-offset-2 text-center header-products">
+				<span>Creatividad con Madera</span>
+				<h2>Nuestros productos</h2>
+				<p>Dignissimos asperiores vitae velit veniam totam fuga
+					molestias accusamus alias autem provident. Odit ab aliquam dolor
+					eius.</p>
+			</div>
+		</section>
 
-
-
+		<div  class="row prof" >
 			<th:block th:each="producto, row:${producto}">
-				<div class="containerNuiw"
+				<div class="containerNuiw col-md-3 col-sm-1 mt-lg-3 mt-sm-3 mt-3"
 					th:style="'background-image:url(' + @{${'img/'+ producto.nombreImagen }} + ');'">
 					<div class="overlayNiuw">
 						<div class="items"></div>
@@ -192,16 +111,16 @@
 						</div>
 						<div class="items price">
 							<p class="old">
-								<th th:text="${producto.precio - 50}" />
-							</p>
-							<p class="new">
 								<th th:text="${producto.precio}" />
 							</p>
+							<p class="new">
+								<th th:text="${producto.precio -50}" />
+							</p>
 						</div>
-						<div class="items cart" th:onclick="'obtenerIds('+${producto.id_producto}+')'">
+						<div class="items cart"
+							th:onclick="'obtenerIds('+${producto.id_producto}+')'">
 							<input type="hidden" th:value="${producto.id_producto}" id="id">
-							<i class="fa fa-shopping-cart"></i>
-							<span>ADD TO CART</span>
+							<i class="fa fa-shopping-cart"></i> <span>ADD TO CART</span>
 						</div>
 					</div>
 				</div>
@@ -215,7 +134,7 @@
 
 </body>
 <script type="text/javascript">
-
+	
 </script>
 
 </html>
