--- a/bin/src/main/resources/templates/block/header.html
+++ b/bin/src/main/resources/templates/block/header.html
@@ -1,5 +1,5 @@
-<header xmlns:th="http://www.thymeleaf.org">
-       <!--NAVBAR-->
+<header>
+	<!--NAVBAR-->
 	<nav class=" navbar navbar-default navbar-expand-md navbar-light ms-a"
 		style="background-color: #192537;">
 		<div class="container-fluid">
@@ -13,25 +13,24 @@
 			</button>
 			<div class="collapse navbar-collapse " id="navbarNavAltMarkup">
 				<ul class="navbar-nav ms-auto pe-5">
-					<li class="dropdownown "><a class="navown px-2 " href="/product">PRODUCTS</a>
+					<li class="dropdownown " sec:authorize="isAuthenticated()">
+					<a class="navown px-2 " href="#" sec:authentication="name"></a>
 						<div class="dropown-content">
 							<div>
-								<a class="navown" href="/product">Night Desk</a>
+								<a class="navown" href="/logout">LOGOUT</a>
 							</div>
-							<div>
-								<a class="navown" href="/product">Tables</a>
-							</div>
-							<div>
-								<a class="navown" href="/product">WorkBench</a>
-							</div>
-						</div></li>
+							</li>
+
 					<li><a class="navown px-2" href="/about">ABOUT US</a></li>
-					<li><a class="navown px-2" href="/tracking">TRACKING</a></li>
-					<li><a class="navown px-2" href="/login">SING IN</a></li>
-					<li><a class="navown px-2" href="/carrito">SHOP<i
+					<li><a class="navown px-2" href="/usu">TRACKING</a></li>
+					<li sec:authorize="!isAuthenticated()"><a class="navown px-2"
+						th:href="@{/login}">SING IN</a></li>
+					<li><a class="navown px-2" href="/ShowCarrito">SHOP<i
 							class="fas fa-shopping-cart ps-2"></i></a></li>
+
+
 				</ul>
 			</div>
 		</div>
 	</nav>
-    </header>
+</header>
