--- a/bin/src/main/resources/templates/block/loginBlock.html
+++ b/bin/src/main/resources/templates/block/loginBlock.html
@@ -11,9 +11,12 @@
                     You have been logged out.
                 </div>
                 <form th:action="@{/login}" method="post">
-                    <div class="mb-3"><label class="form-label"> User Name : <input type="text" name="username" /> </label></div>
+                    <div class="mb-3"><label class="form-label"> User Name : <input type="email" name="email" /> </label></div>
                     <div class="mb-3"><label class="form-label"> Password: <input type="password" name="password" /> </label></div>
                     <div class="mb-3"><input type="submit" value="Sign In" /></div>
+                </form> 
+                <form th:action="@{/register}" method="post">
+                    <div class="mb-3"><input type="submit" value="Registrarse" /></div>
                 </form> 
                <!--  <form>
                     <div class="mb-3">
