--- a/bin/src/main/resources/templates/product.html
+++ b/bin/src/main/resources/templates/product.html
@@ -30,145 +30,173 @@
 <body>
     <th:block th:include="/block/header"></th:block>
 
-    <div class="container rob">
-        <div class="row">
-            <div class="col-sm-7">
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-                        <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-                        <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/uno.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/dos.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/tres.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </a>
-                </div>
-            </div>
-            <div class="col-sm-5">
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab"
-                            aria-controls="home" aria-selected="true">Product Details</a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab"
-                            aria-controls="profile" aria-selected="false">Specification</a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab"
-                            aria-controls="contact" aria-selected="false">Contact</a>
-                    </li>
-                </ul>
-                <div class="tab-content detalle2" id="myTabContent">
-                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <h3 th:text="'Nombre del producto: '+${producto.nombre}"></h3>
-                        <label th:text="${producto.descripcion}">
-                        </label>
-                        <div class="container">
-                            <div class="row justify-content-md-center">
-                                <div class="col col-lg-12">
-                                    <table class="table text-center">
-                                        <thead>
-                                            <tr>
-                                                <th scope="col">Metal</th>
-                                                <th scope="col">Madera Pino</th>
-                                                <th scope="col">Madera Cedro</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>$$$</td>
-                                                <td>$$$</td>
-                                                <td>$$$</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                    <label th:text="'Precio: '+${producto.precio}"></label>
-                                    <p></p>
-                                    <label th:text="'Material: '+${producto.material.nombre_material}"></label>
-                                    <p></p>
-                                    
-                                    <!--<button type="button" class="btn btn-primary" th:onclick ="'pruebaObtenerId('+${producto.id_producto}+')'">
-                                        Agregar a carrito
-                                    </button>-->
+    <main>
 
-                                    <button type="button" class="btn btn-primary" th:onclick ="'obtenerIdsC('+${producto.id_producto}+')'">
-                                        Agregar a carrito
-                                    </button>
+        <div class="container rob">
+            <div class="row">
+                <div class="col-sm-7">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+                            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+                            <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/uno.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>First slide label</h5>
+                                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/dos.png" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Second slide label</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/tres.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Third slide label</h5>
+                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                                 </div>
                             </div>
                         </div>
-                        <label>
-
-                        </label>
-                    </div>
-                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                        <label th:text="'Detalles: '+${producto.detalles}">
-                        </label>
-                        <p></p>
-                        <label th:text="'Tipo de producto: '+${producto.tipo_producto.nombre_tipo}">
-                    </div>
-                    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-                        <label>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum quas tempore
-                            laboriosam totam quos dolorem earum incidunt nam excepturi molestiae ad labore
-                            repellendus numquam, eius, quis sit dolores minus! Cumque.
-                            <p></p>
-                        </label>
+                        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </a>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-    <div>
+                <div class="col-sm-5">
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab"
+                                aria-controls="home" aria-selected="true">Product Details</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab"
+                                aria-controls="profile" aria-selected="false">Specification</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab"
+                                aria-controls="contact" aria-selected="false">Contact</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content detalle2" id="myTabContent">
+                        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                            <h3 th:text="'Nombre del producto: '+${producto.nombre}"></h3>
+                            <label th:text="${producto.descripcion}">
+                            </label>
+                            <div class="container">
+                                <div class="row justify-content-md-center">
+                                    <div class="col col-lg-12">
+                                        <table class="table text-center">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">Metal</th>
+                                                    <th scope="col">Madera Pino</th>
+                                                    <th scope="col">Madera Cedro</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>$$$</td>
+                                                    <td>$$$</td>
+                                                    <td>$$$</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <label th:text="'Precio: '+${producto.precio}"></label>
+                                        <p></p>
+                                        <label th:text="'Material: '+${producto.material.nombre_material}"></label>
+                                        <p></p>
 
-    </div>
-    <div class="promocion palabra">
-        <div class="container rob">
-            <div class="row justify-content-md-center">
-                <div class="col col-lg-10">
-                    <form>
-                        <div class="mb-3">
-                            <p class="fs-2">Recibe promociones</p>
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                            <div id="emailHelp">We'll never share your email with anyone else.</div>
+                                        <!--<button type="button" class="btn btn-primary" th:onclick ="'pruebaObtenerId('+${producto.id_producto}+')'">
+                                        Agregar a carrito
+                                    </button>-->
+
+                                        <button type="button" class="btn btn-primary"
+                                            th:onclick="'obtenerIdsC('+${producto.id_producto}+')'">
+                                            Agregar a carrito
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <label>
+
+                            </label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
+                        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <label th:text="'Detalles: '+${producto.detalles}">
+                            </label>
+                            <p></p>
+                            <label th:text="'Tipo de producto: '+${producto.tipo_producto.nombre_tipo}">
+                        </div>
+                        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                            <label>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum quas tempore
+                                laboriosam totam quos dolorem earum incidunt nam excepturi molestiae ad labore
+                                repellendus numquam, eius, quis sit dolores minus! Cumque.
+                                <p></p>
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div>
 
+        </div>
+
+        <div class="container-fluid rob">
+            <section class="row justify-content-center">
+                <div class="col-md-8 col-md-offset-2 text-center header-products">
+                    <span>Creatividad con Madera</span>
+                    <h2>Nuestros productos</h2>
+                    <p>Dignissimos asperiores vitae velit veniam totam fuga
+                        molestias accusamus alias autem provident. Odit ab aliquam dolor
+                        eius.</p>
+                </div>
+            </section>
+
+            <th:block th:each="producto, row:${producto2}">
+                <div class="containerNuiw"
+                    th:style="'background-image:url(' + @{${'img/'+ producto.nombreImagen }} + ');'">
+                    <div class="overlayNiuw">
+                        <div class="items"></div>
+                        <div class="items head">
+                            <p>
+                                <th th:text="${producto.nombre}" />
+                            </p>
+                            <hr>
+                        </div>
+                        <div class="items price">
+                            <p class="old">
+                                <th th:text="${producto.precio - 50}" />
+                            </p>
+                            <p class="new">
+                                <th th:text="${producto.precio}" />
+                            </p>
+                        </div>
+                        <div class="items cart" th:onclick="'obtenerIds('+${producto.id_producto}+')'">
+                            <input type="hidden" th:value="${producto.id_producto}" id="id">
+                            <i class="fa fa-shopping-cart"></i>
+                            <span>ADD TO CART</span>
+                        </div>
+                    </div>
+                </div>
+            </th:block>
+        </div>
+
+    </main>
     <th:block th:include="/block/footer"></th:block>
 
 </body>
