--- a/bin/src/main/resources/static/css/cstyle.css
+++ b/bin/src/main/resources/static/css/cstyle.css
@@ -1,3 +1,4 @@
+
 /* 
                                                Estilos Rob                                                                   */
 .rob {
@@ -196,6 +197,18 @@
 }
 
 /*Show cards of product index by poh*/
+
+.carritoVacio{
+	height: 25em;
+	margin-top: 5em;
+}
+.cars{
+	width: 50%;
+	height: 50%;
+	font-size: 200;
+	margin-bottom: 50px;
+	padding-top: 10px;
+}
 .Mediacards {
 	width: 100%;
 	height: 100%;
