--- a/src/main/resources/templates/carritoRegistro.html
+++ b/src/main/resources/templates/carritoRegistro.html
@@ -1,38 +1,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Carrito de compras</title>
-<!--Boostrap  -->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	crossorigin="anonymous">
-<!--Boostrap Script  -->
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-	integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-	crossorigin="anonymous"></script>
-<!--animate css  -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Carrito de compras</title>
+	<!--Boostrap  -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<!--Boostrap Script  -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+		crossorigin="anonymous"></script>
+	<!--animate css  -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-<!--Own Styles  -->
-<link rel="stylesheet" href="css/cstyle.css">
-<link rel="stylesheet" href="css/estilo.css">
-<!--Font Awesome-->
-<script src="https://kit.fontawesome.com/f2dde07271.js"
-	crossorigin="anonymous"></script>
-<!--ALLfont.es-->
-<link href="https://allfont.es/allfont.css?fonts=montserrat-light"
-	rel="stylesheet" type="text/css" />
-<link href="https://allfont.es/allfont.css?fonts=playfair-display"
-	rel="stylesheet" type="text/css" />
+	<!--Own Styles  -->
+	<link rel="stylesheet" href="css/cstyle.css">
+	<link rel="stylesheet" href="css/estilo.css">
+	<!--Font Awesome-->
+	<script src="https://kit.fontawesome.com/f2dde07271.js" crossorigin="anonymous"></script>
+	<!--ALLfont.es-->
+	<link href="https://allfont.es/allfont.css?fonts=montserrat-light" rel="stylesheet" type="text/css" />
+	<link href="https://allfont.es/allfont.css?fonts=playfair-display" rel="stylesheet" type="text/css" />
 
-<script src="js/main.js"></script>
+	<script src="js/main.js"></script>
 </head>
 
 <body>
@@ -44,59 +36,65 @@
 			<div class="col col-lg-10">
 				<div class="text-center">
 					<h1>Carrito de compras</h1>
-					<div>
-						<ul class="nav justify-content-center mt-5 mr-5 ml-5">
-							<li class="nav-item carritoNav">
-								<p class="nav-link carritoNavLetra">1. Revisar carrito</p>
-							</li>
-							<li class="nav-item carritoNav2">
-								<p class="nav-link ">2. Identificacion</p>
-							</li>
-							<li class="nav-item carritoNav2">
-								<p class="nav-link ">3. Entrega y pago</p>
-							</li>
-						</ul>
-					</div>
 
-					<div class="carritoVacio"
-						th:if="${producto==null or producto.empty}">
+					<div class="carritoVacio" th:if="${producto==null or producto.empty}">
 						<h1>Carrito vacio</h1>
 						<div>
 							<i class="fas fa-cart-arrow-down cars"></i>
 						</div>
 						<h3>Intenta agregando productos antes de tu compra</h3>
 					</div>
-					<div>
-					<th:block th:each="producto, row:${producto}">
-						<div class="card mb-3" style="max-width: 540px;">
-							<div class="row g-0">
-								<div class="col-md-4 containerNuiw" th:style="'background-image:url(' + @{${'img/'+ producto.nombreImagen }} + ');'" >
-								
-								</div>
-								<div class="col-md-8">
-									<div class="card-body">
-										<h5 class="card-title"> <th th:text="${producto.nombre}" /></h5>
-										<p class="card-text"> <th th:text="${producto.nombre}" /></p>
-										
+
+					<div class="container">
+
+						<div class="detalle3">
+							<div class="row prof">
+
+								<th:block th:each="producto, row:${producto}">
+									<div class="card mb-3" style="max-width: 540px;">
+										<div class="row g-0">
+											<div class="containerNuiw col-md-3 col-sm-1 mt-lg-3 mt-sm-3 mt-3"
+												th:style="'background-image:url(' + @{${'img/'+ producto.nombreImagen }} + ');'">
+
+											</div>
+											<div class="col-md-11">
+												<div class="card-body text-center">
+													<h5 class="card-title">
+														<th th:text="${producto.nombre}" />
+													</h5>
+													<p class="card-text">
+														<th th:text="${producto.nombre}" />
+													</p>
+												</div>
+											</div>
+										</div>
 									</div>
+								</th:block>
+							</div>
+
+						</div>
+
+					</div>
+					<div class="container">
+						<div class="row justify-content-md-center">
+							<div class="col col-lg-10">
+								<div sec:authorize="isAuthenticated()">
+									<button type="button" class="btn btn-primary" data-bs-toggle="modal"
+										data-bs-target="#exampleModal">
+										Total de compra</button>
+									
+									<button type="button" class="btn btn-primary" th:onclick="deleteCarrito()">
+										Eliminar carrito de compras
+									</button>
 								</div>
 							</div>
 						</div>
-						</th:block>
+
 					</div>
-					
+					<th:block th:include="/block/carritoModal"></th:block>
 				</div>
-				<div>
-					<div sec:authorize="isAuthenticated()">
-						<button type="button" class="btn btn-primary"
-							data-bs-toggle="modal" data-bs-target="#exampleModal">
-							Total de compra</button>
-					</div>
-				</div>
-				<th:block th:include="/block/carritoModal"></th:block>
 			</div>
 		</div>
-	</div>
 	</div>
 
 	<th:block th:include="/block/footer"></th:block>
